--- a/Vitkund/Views/Home/About.cshtml
+++ b/Vitkund/Views/Home/About.cshtml
@@ -84,8 +84,8 @@
 
                 <div class="col-lg-6">
                     <div class="video-popup-wrapper">
-                        <img class="w-100 rbt-radius" src="~/Content/assets/images/videos/vit3.png" alt="Video Images">
-                        <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/assets/images/videos/vit4.mp4">
+                        <img class="w-100 rbt-radius" src="~/Content/assets/images/videos/intro.png" alt="Video Images">
+                        <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/assets/images/videos/vitkund-intro.mp4">
                             <span><i class="feather-play"></i></span>
                         </a>
 
@@ -109,7 +109,7 @@
                                         <i class="feather-heart"></i>
                                     </div>
                                     <div class="feature-content">
-                                        <h6 class="feature-title">We support make in India Campaign.</h6>
+                                        <h6 class="feature-title">We support Make in India campaign.</h6>
                                     </div>
                                 </div>
 
@@ -127,7 +127,7 @@
                                         <i class="feather-heart"></i>
                                     </div>
                                     <div class="feature-content">
-                                        <h6 class="feature-title">On every enrollment we contribute To a Child's Education.</h6>
+                                        <h6 class="feature-title">On every enrollment we contribute to a Child's Education.</h6>
                                     </div>
                                 </div>
 
@@ -184,13 +184,13 @@
                             </div>
                         </div>
                         <ul class="rbt-list-style-1">
-                            <li><i class="feather-check"></i>Vitkund Gaon (Go Ahead Or Not)</li>
-                            <li><i class="feather-check"></i>Learn at your pace</li>
-                            <li><i class="feather-check"></i>Watch the videos at your convenience.</li>
-                            <li><i class="feather-check"></i>Trending Business Ideas</li>
-                            <li><i class="feather-check"></i>Premium Helpdesk & Support</li>
-                            <li><i class="feather-check"></i>Motivational Stories & Quotes.</li>
-                            <li><i class="feather-check"></i>Live Mentorship.</li>
+                            <li><i class="feather-check"></i> <a href="/vitkund" target="_blank">Vitkund Gaon (बिजनेस कुंडली)</a></li>
+                            <li><i class="feather-check"></i><a href="/motivational-story">Learn at your pace</li>
+                            <li><i class="feather-check"></i> <a href="/videos" target="_blank">Watch the videos at your convenience.</a></li>
+                            <li><i class="feather-check"></i> <a href="/business-ideas" target="_blank">Trending Business Ideas</a></li>
+                            <li><i class="feather-check"></i> <a href="/contact-us" target="_blank">Premium Helpdesk & Support</a></li>
+                            <li><i class="feather-check"></i> <a href="/motivational-story" target="_blank">Motivational Stories & Quotes.</a></li>
+                            <li><i class="feather-check"></i><a href="#">Live Mentorship.</a></li>
                         </ul>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                                             <h3 class="counter color-white">
                                                 <span class="odometer" data-count="100">00</span>
                                             </h3>
-                                            <h5 class="title color-white">Certification Business</h5>
+                                            <h5 class="title color-white">Successfully Running Buisness</h5>
                                             <span class="subtitle color-white">Online Course</span>
                                         </div>
                                     </div>
