--- a/Vitkund/Views/Home/Contact.cshtml
+++ b/Vitkund/Views/Home/Contact.cshtml
@@ -30,7 +30,7 @@
                         </div>
                         <div class="inner">
                             <h4 class="title">Our Email Address</h4>
-                            <p><a href="mailto:info@vitkund.com">info@vitkund.com</a></p>
+                            <p><a href="mailto:vitkundindia@gmail.com">vitkundindia@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         </div>
                         <div class="inner">
                             <h4 class="title">Our Location</h4>
-                            <p>Rohtak, Haryana (124001)</p>
+                            <p>Vitkund Enterprises, H.No 688, Sector 6,Rohtak 124001, Haryana</p>
                         </div>
                     </div>
                 </div>
