--- a/Vitkund/Views/Home/Plan.cshtml
+++ b/Vitkund/Views/Home/Plan.cshtml
@@ -37,10 +37,10 @@
                     </div>
                     <div class="pricing-body">
                         <ul class="list-item">
-                            <li><i class="feather-check"></i> Vitkund Gaon</li>
+                            <li><i class="feather-check"></i> Vitkund Gaon (बिजनेस कुंडली)</li>
                             <li><i class="feather-check"></i> Vitkund Video Library</li>
                             <li><i class="feather-check"></i> Motivational Stories & Quotes.</li>
-                            <li><i class="feather-check"></i> WharsApp Support</li>
+                            <li><i class="feather-check"></i> Whatsapp Support</li>
                             <li><i class="feather-check"></i> Expert Advise</li>
                             <li><i class="feather-check"></i> Trending Business Ideas</li>
                             <li><i class="feather-check"></i> Funding Advise</li>
@@ -76,10 +76,10 @@
                     </div>
                     <div class="pricing-body">
                         <ul class="list-item">
-                            <li><i class="feather-check"></i> Vitkund Gaon</li>
+                            <li><i class="feather-check"></i> Vitkund Gaon (बिजनेस कुंडली)</li>
                             <li><i class="feather-check"></i> Vitkund Video Library</li>
                             <li><i class="feather-check"></i> Motivational Stories & Quotes.</li>
-                            <li><i class="feather-check"></i> WharsApp Support</li>
+                            <li><i class="feather-check"></i> Whatsapp Support</li>
                             <li><i class="feather-check"></i> Expert Advise</li>
                             <li><i class="feather-check"></i> Trending Business Ideas</li>
                             <li><i class="feather-check"></i> Funding Advise</li>
@@ -116,10 +116,10 @@
                     </div>
                     <div class="pricing-body">
                         <ul class="list-item">
-                            <li><i class="feather-check"></i> Vitkund Gaon</li>
+                            <li><i class="feather-check"></i> Vitkund Gaon (बिजनेस कुंडली)</li>
                             <li><i class="feather-check"></i> Vitkund Video Library</li>
                             <li><i class="feather-check"></i> Motivational Stories & Quotes.</li>
-                            <li><i class="feather-check"></i> WharsApp Support</li>
+                            <li><i class="feather-check"></i> Whatsapp Support</li>
                             <li><i class="feather-check"></i> Expert Advise</li>
                             <li><i class="feather-check"></i> Trending Business Ideas</li>
                             <li><i class="feather-check"></i> Funding Advise</li>
@@ -155,10 +155,10 @@
                     </div>
                     <div class="pricing-body">
                         <ul class="list-item">
-                            <li><i class="feather-check"></i> Vitkund Gaon</li>
+                            <li><i class="feather-check"></i> Vitkund Gaon (बिजनेस कुंडली)</li>
                             <li><i class="feather-check"></i> Vitkund Video Library</li>
                             <li><i class="feather-check"></i> Motivational Stories & Quotes.</li>
-                            <li><i class="feather-check"></i> WharsApp Support</li>
+                            <li><i class="feather-check"></i> Whatsapp Support</li>
                             <li><i class="feather-check"></i> Expert Advise</li>
                             <li><i class="feather-check"></i> Trending Business Ideas</li>
                             <li><i class="feather-check"></i> Funding Advise</li>
