--- a/Vitkund/Views/Home/Vitkundgaon.cshtml
+++ b/Vitkund/Views/Home/Vitkundgaon.cshtml
@@ -4,13 +4,14 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb-inner text-center">
-                    <h2 class="title">Vit Kund Gaon Part 1</h2>
+                    <h2 class="title">Vitkund Gaon Part 1</h2>
+                    <p>"कृप्या अपनी प्रोफाइल के अनुसार नीचे दिए हुए विकल्पों में से किसी एक विकल्प को चुने या लिखें"</p>
                     <ul class="page-list">
                         <li class="rbt-breadcrumb-item"><a href="index">Home</a></li>
                         <li>
                             <div class="icon-right"><i class="feather-chevron-right"></i></div>
                         </li>
-                        <li class="rbt-breadcrumb-item active">Vit Kund Gaon Part 1</li>
+                        <li class="rbt-breadcrumb-item active">Vitkund Gaon Part 1</li>
                     </ul>
                 </div>
             </div>
