--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Vit kund Business Guides</title>
+    <title>Vitkund Business Guides</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -51,10 +51,13 @@
                                 <div class="header-info">
                                     <ul class="rbt-information-list">
                                         <li>
-                                            <a href="#"><i class="fab fa-instagram"></i>100k <span class="d-none d-xxl-block">Followers</span></a>
+                                            <a href="#"><i class="fab fa-instagram"></i>1k <span class="d-none d-xxl-block">Followers</span></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="fab fa-facebook-square"></i>500k <span class="d-none d-xxl-block">Followers</span></a>
+                                            <a href="#"><i class="fab fa-facebook-square"></i>75k <span class="d-none d-xxl-block">Followers</span></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="fab fa-youtube-square"></i>35k <span class="d-none d-xxl-block">Subscriber</span></a>
                                         </li>
                                         <li>
                                             <a href="tel:8607609898"><i class="feather-phone"></i>+91 8607609898</a>
@@ -687,8 +690,8 @@
                                 <h5 class="ft-title">Get Contact</h5>
                                 <ul class="ft-link">
                                     <li><span>Phone:</span> <a href="tel:8607609898">860 760 9898</a></li>
-                                    <li><span>E-mail:</span> <a href="mailto:info@vitkund.com">info@vitkund.com</a></li>
-                                    <li><span>Location:</span> Rohtak, Haryana</li>
+                                    <li><span>E-mail:</span> <a href="mailto:vitkundindia@gmail.com">vitkundindia@gmail.com</a></li>
+                                    <li><span>Location:</span> Vitkund Enterprises, H.No 688, Sector 6,Rohtak 124001, Haryana</li>
                                 </ul>
                                 <ul class="social-icon social-default icon-naked justify-content-start mt--20">
                                     <li>
@@ -726,7 +729,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-12">
-                        <p class="rbt-link-hover text-center text-lg-start">Copyright © 2023 Vitkund | All Rights Reserved</p>
+                        <p class="rbt-link-hover text-center text-lg-start">Copyright © 2024 Vitkund | All Rights Reserved</p>
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-12">
                         <ul class="copyright-link rbt-link-hover justify-content-center justify-content-lg-end mt_sm--10 mt_md--10">
