--- a/Vitkund/Views/Home/About.cshtml
+++ b/Vitkund/Views/Home/About.cshtml
@@ -23,13 +23,13 @@
                 <div class="col-lg-6">
                     <div class="thumbnail-wrapper">
                         <div class="thumbnail image-1">
-                            <img data-parallax='{"x": 0, "y": -20}' src="~/Content/assets/images/shop11.png" alt="Education Images">
+                            <img data-parallax='{"x": 0, "y": -20}' src="~/Content/assets/images/shop13.png" alt="Education Images">
                         </div>
                         <div class="thumbnail image-2 d-none d-xl-block">
                             <img data-parallax='{"x": 0, "y": 60}' src="~/Content/assets/images/off6.png" alt="Education Images">
                         </div>
                         <div class="thumbnail image-3 d-none d-md-block">
-                            <img data-parallax='{"x": 0, "y": 80}' src="~/Content/assets/images/shop3.png" alt="Education Images">
+                            <img data-parallax='{"x": 0, "y": 80}' src="~/Content/assets/images/shop6.png" alt="Education Images">
                         </div>
                     </div>
                 </div>
@@ -94,10 +94,10 @@
                 <div class="col-lg-6">
                     <div class="inner pl--50 pl_lg--0 pl_md--0 pl_sm--0">
                         <div class="section-title text-start">
-                            <div class="rbt-feature-wrapper mt--40">
+                            <div class="rbt-feature-wrapper">
                                 <div class="rbt-feature feature-style-1 align-items-center">
                                     <div class="icon bg-pink-opacity">
-                                        <i class="feather-heart"></i>
+                                        <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
                                         <h6 class="feature-title">We want to make complete Entrepreneur</h6>
@@ -105,8 +105,8 @@
                                 </div>
 
                                 <div class="rbt-feature feature-style-1 align-items-center">
-                                    <div class="icon bg-primary-opacity">
-                                        <i class="feather-heart"></i>
+                                    <div class="icon bg-pink-opacity">
+                                        <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
                                         <h6 class="feature-title">We support Make in India campaign.</h6>
@@ -115,7 +115,7 @@
 
                                 <div class="rbt-feature feature-style-1 align-items-center">
                                     <div class="icon bg-pink-opacity">
-                                        <i class="feather-heart"></i>
+                                        <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
                                         <h6 class="feature-title">We are aiming 5 Trillion Economy.</h6>
@@ -123,8 +123,8 @@
                                 </div>
 
                                 <div class="rbt-feature feature-style-1 align-items-center">
-                                    <div class="icon bg-primary-opacity">
-                                        <i class="feather-heart"></i>
+                                    <div class="icon bg-pink-opacity">
+                                        <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
                                         <h6 class="feature-title">On every enrollment we contribute to a Child's Education.</h6>
@@ -133,13 +133,20 @@
 
                                 <div class="rbt-feature feature-style-1 align-items-center">
                                     <div class="icon bg-pink-opacity">
-                                        <i class="feather-heart"></i>
+                                        <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
                                         <h6 class="feature-title">We support Vocal for Local.</h6>
                                     </div>
                                 </div>
-
+                                <div class="rbt-feature feature-style-1 align-items-center">
+                                    <div class="icon bg-pink-opacity">
+                                        <i class="feather-check"></i>
+                                    </div>
+                                    <div class="feature-content">
+                                        <h6 class="feature-title">We support विकसित भारत अभियान</h6>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
