--- a/Vitkund/Views/Home/Index.cshtml
+++ b/Vitkund/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
                                         <div class="rbt-card variation-01 rbt-hover">
                                             <div class="rbt-card-img">
                                                 <a href="#">
-                                                    <img src="~/Content/assets/images/off01.png" alt="Card image">
+                                                    <img src="~/Content/assets/images/card.png" alt="Card image">
                                                     @*<div class="rbt-badge-3 bg-white">
                                                         <span>-40%</span>
                                                         <span>Off</span>
@@ -81,7 +81,7 @@
                                         <div class="rbt-card variation-01 rbt-hover">
                                             <div class="rbt-card-img">
                                                 <a href="/contact-us">
-                                                    <img src="~/Content/assets/images/off03.png" alt="Card image">
+                                                    <img src="~/Content/assets/images/new-bc.png" alt="Card image">
                                                     @*<div class="rbt-badge-3 bg-white">
                                                         <span>-40%</span>
                                                         <span>Off</span>
@@ -110,7 +110,7 @@
                                         <div class="rbt-card variation-01 rbt-hover">
                                             <div class="rbt-card-img">
                                                 <a href="#">
-                                                    <img src="~/Content/assets/images/off06.png" alt="Card image">
+                                                    <img src="~/Content/assets/images/advise.png" alt="Card image">
                                                     @*<div class="rbt-badge-3 bg-white">
                                                         <span>-40%</span>
                                                         <span>Off</span>
@@ -154,13 +154,13 @@
                     <div class="col-lg-6">
                         <div class="thumbnail-wrapper">
                             <div class="thumbnail image-1">
-                                <img data-parallax='{"x": 0, "y": -20}' src="~/Content/assets/images/shop110.png" alt="Education Images">
+                                <img data-parallax='{"x": 0, "y": -20}' src="~/Content/assets/images/vtk13.png" alt="Education Images">
                             </div>
                             <div class="thumbnail image-2 d-none d-xl-block">
-                                <img data-parallax='{"x": 0, "y": 60}' src="~/Content/assets/images/off6.png" alt="Education Images">
+                                <img data-parallax='{"x": 0, "y": 60}' src="~/Content/assets/images/thm.png" alt="Education Images">
                             </div>
                             <div class="thumbnail image-3 d-none d-md-block">
-                                <img data-parallax='{"x": 0, "y": 80}' src="~/Content/assets/images/shop03.png" alt="Education Images">
+                                <img data-parallax='{"x": 0, "y": 80}' src="~/Content/assets/images/vtk12.png" alt="Education Images">
                             </div>
                         </div>
                     </div>
@@ -231,7 +231,7 @@
                         <div class="rbt-card variation-02 rbt-hover">
                             <div class="rbt-card-img">
                                 <a href="contact-us">
-                                    <img src="~/Content/assets/images/work.png" alt="Card image">
+                                    <img src="~/Content/assets/images/vitg.png" alt="Card image">
                                 </a>
                             </div>
                             <div class="rbt-card-body">
@@ -252,7 +252,7 @@
                         <div class="rbt-card variation-02 rbt-hover">
                             <div class="rbt-card-img">
                                 <a href="contact-us">
-                                    <img src="~/Content/assets/images/off1.png" alt="Card image">
+                                    <img src="~/Content/assets/images/bt.png" alt="Card image">
                                 </a>
                             </div>
                             <div class="rbt-card-body">
@@ -273,7 +273,7 @@
                         <div class="rbt-card variation-02 rbt-hover">
                             <div class="rbt-card-img">
                                 <a href="contact-us">
-                                    <img src="~/Content/assets/images/off03.png" alt="Card image">
+                                    <img src="~/Content/assets/images/gov.png" alt="Card image">
                                 </a>
                             </div>
                             <div class="rbt-card-body">
@@ -294,7 +294,7 @@
                         <div class="rbt-card variation-02 rbt-hover">
                             <div class="rbt-card-img">
                                 <a href="contact-us">
-                                    <img src="~/Content/assets/images/office.png" alt="Card image">
+                                    <img src="~/Content/assets/images/loans.png" alt="Card image">
                                 </a>
                             </div>
                             <div class="rbt-card-body">
@@ -315,7 +315,7 @@
                         <div class="rbt-card variation-02 rbt-hover">
                             <div class="rbt-card-img">
                                 <a href="contact-us">
-                                    <img src="~/Content/assets/images/off5.png" alt="Card image">
+                                    <img src="~/Content/assets/images/tbi.png" alt="Card image">
                                 </a>
                             </div>
                             <div class="rbt-card-body">
@@ -336,7 +336,7 @@
                         <div class="rbt-card variation-02 rbt-hover">
                             <div class="rbt-card-img">
                                 <a href="contact-us">
-                                    <img src="~/Content/assets/images/off7.png" alt="Card image">
+                                    <img src="~/Content/assets/images/bs-v.png" alt="Card image">
                                 </a>
                             </div>
                             <div class="rbt-card-body">
@@ -437,7 +437,14 @@
                                             <h6 class="feature-title">We support Atamnirbhar Bharat</h6>
                                         </div>
                                     </div>
-
+                                    <div class="rbt-feature feature-style-1 align-items-center">
+                                        <div class="icon bg-pink-opacity">
+                                            <i class="feather-check"></i>
+                                        </div>
+                                        <div class="feature-content">
+                                            <h6 class="feature-title">We support विकसित भारत अभियान</h6>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
