--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -51,6 +51,9 @@
                                 <div class="header-info">
                                     <ul class="rbt-information-list">
                                         <li>
+                                            <a href="tel:8607609898"><i class="feather-phone"></i>+91 8607609898</a>
+                                        </li>
+                                        <li>
                                             <a href="#"><i class="fab fa-instagram"></i>1k <span class="d-none d-xxl-block">Followers</span></a>
                                         </li>
                                         <li>
@@ -59,9 +62,7 @@
                                         <li>
                                             <a href="#"><i class="fab fa-youtube-square"></i>35k <span class="d-none d-xxl-block">Subscriber</span></a>
                                         </li>
-                                        <li>
-                                            <a href="tel:8607609898"><i class="feather-phone"></i>+91 8607609898</a>
-                                        </li>
+                                        
                                     </ul>
                                 </div>
                                 <!-- End Header Information List  -->
@@ -526,7 +527,7 @@
                 </div>
                 <ul class="navbar-top-left rbt-information-list justify-content-start" style="padding-top:30px;">
                     <li>
-                        <a href="mailto:info@vitkund.com"><i class="feather-mail"></i>info@vitkund.com</a>
+                        <a href="mailto:vitkundindia@gmail.com"><i class="feather-mail"></i>vitkundindia@gmail.com</a>
                     </li>
                     <li>
                         <a href="tel:8607609898"><i class="feather-phone"></i>8607609898</a>
@@ -541,6 +542,7 @@
                     <li><a href="/course">Courses</a></li>
                     <li><a href="/our-services">Our Services</a></li>
                     <li><a href="/plan">Plan</a></li>
+                    <li><a href="/videos">Course Videos</a></li>
                     <li><a href="/faq">FAQ</a></li>
                     <li><a href="/contact-us">Contact Us</a></li>
                 </ul>
