--- a/Vitkund/Views/Home/Index.cshtml
+++ b/Vitkund/Views/Home/Index.cshtml
@@ -445,6 +445,22 @@
                                             <h6 class="feature-title">We support विकसित भारत अभियान</h6>
                                         </div>
                                     </div>
+                                    <div class="rbt-feature feature-style-1 align-items-center">
+                                        <div class="icon bg-pink-opacity">
+                                            <i class="feather-check"></i>
+                                        </div>
+                                        <div class="feature-content">
+                                            <h6 class="feature-title">बेरोजगारी से रोजगार की ओर</h6>
+                                        </div>
+                                    </div>
+                                    <div class="rbt-feature feature-style-1 align-items-center">
+                                        <div class="icon bg-pink-opacity">
+                                            <i class="feather-check"></i>
+                                        </div>
+                                        <div class="feature-content">
+                                            <h6 class="feature-title">हमारा सपना हर घर हो कारोबार</h6>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
