--- a/Vitkund/Views/Home/About.cshtml
+++ b/Vitkund/Views/Home/About.cshtml
@@ -23,13 +23,13 @@
                 <div class="col-lg-6">
                     <div class="thumbnail-wrapper">
                         <div class="thumbnail image-1">
-                            <img data-parallax='{"x": 0, "y": -20}' src="~/Content/assets/images/shop13.png" alt="Education Images">
+                            <img data-parallax='{"x": 0, "y": -20}' src="~/Content/assets/images/vtk13.png" alt="Education Images">
                         </div>
                         <div class="thumbnail image-2 d-none d-xl-block">
-                            <img data-parallax='{"x": 0, "y": 60}' src="~/Content/assets/images/off6.png" alt="Education Images">
+                            <img data-parallax='{"x": 0, "y": 60}' src="~/Content/assets/images/thm.png" alt="Education Images">
                         </div>
                         <div class="thumbnail image-3 d-none d-md-block">
-                            <img data-parallax='{"x": 0, "y": 80}' src="~/Content/assets/images/shop6.png" alt="Education Images">
+                            <img data-parallax='{"x": 0, "y": 80}' src="~/Content/assets/images/vtk12.png" alt="Education Images">
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,22 @@
                                         <h6 class="feature-title">We support विकसित भारत अभियान</h6>
                                     </div>
                                 </div>
-
+                                <div class="rbt-feature feature-style-1 align-items-center">
+                                    <div class="icon bg-pink-opacity">
+                                        <i class="feather-check"></i>
+                                    </div>
+                                    <div class="feature-content">
+                                        <h6 class="feature-title">बेरोजगारी से रोजगार की ओर</h6>
+                                    </div>
+                                </div>
+                                <div class="rbt-feature feature-style-1 align-items-center">
+                                    <div class="icon bg-pink-opacity">
+                                        <i class="feather-check"></i>
+                                    </div>
+                                    <div class="feature-content">
+                                        <h6 class="feature-title">हमारा सपना हर घर हो कारोबार</h6>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
